Archive2/4b/5dd6763b794888/output
main.cpp: In constructor ‘base_processor::base_processor(std::unique_ptr<channel>)’:
main.cpp:30:96: error: pure virtual ‘virtual void base_processor::do_payload()’ called from constructor [-Werror]
     explicit base_processor(std::unique_ptr<channel> ch) : channel_(std::move(ch)) {do_payload();}
                                                                                                ^
cc1plus: all warnings being treated as errors
